gcloud/pod_pixel_generator.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: pixel-generator
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: micro
    spec:
      nodeSelector:
        worker: micro
      containers:
      - image: gcr.io/kubetest-180915/queroquitar:latest
        imagePullPolicy: "Always"
        name: app
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
      restartPolicy: Always
