gcloud/service_pixel_generator.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-prod-micro
  namespace: default
  labels:
    app: micro
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: micro
  type: NodePort
